# Dir_browser

./: .browsedir.c.swo  .gitignore  CMakeLists.txt  Makefile  README  README.md  browsedir.c  browsedir.h  color.h  dyn_array.c  dyn_array.h  executor.c  executor.h  global.h  index.html  main.c  opt.c  opt.h  print.c  print.h  search.c  search.h  status.c  status.h  utils.c  utils.h
